syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package rpc;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc GetVisitor (VisitorRequest) returns (VisitorReply) {}
}

// The request message containing the user's name.
message VisitorRequest {
  string ip = 1;
  string ua = 2;
  string id = 3;
  string extra = 4;
}

// The response message containing the greetings
message VisitorReply {
  string status = 1;
  string body = 2;
}
